# fullstack-test-task

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TASKS.md  docker-compose.dev.yml
.github/workflows/: ci.yml
backend/: .coverage  Dockerfile  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_add_original_mime_type.py  0002_add_cascade_fk.py  0003_drop_scan_results_unique.py  7f3a1e2b4c5d_scan_results.py  d49c6650494c_pipeline_tables.py
backend/src/: app.py  models.py  schemas.py  service.py  tasks.py
backend/src/application/metadata/: default_extractor.py  extractor_registry.py  pdf_extractor.py  text_extractor.py
backend/src/application/scanner/: threat_scanner.py
backend/src/application/scanner/checks/: file_size_check.py  mime_mismatch_check.py  suspicious_extension.py
backend/src/application/services/: alert_service.py  file_service.py
backend/src/core/: config.py
backend/src/domain/: __init__.py  enums.py  events.py  exceptions.py
backend/src/domain/entities/: __init__.py  alert.py  file.py  processing_task.py  scan_result.py  stored_file.py  task_execution.py
backend/src/domain/interfaces/: event_bus.py  file_storage.py  metadata_extractor.py  repositories.py  scan_check.py  task_dispatcher.py  unit_of_work.py
backend/src/infrastructure/: __init__.py  database.py  task_dispatcher.py
backend/src/infrastructure/database/: __init__.py  models.py  unit_of_work.py
backend/src/infrastructure/database/mappers/: __init__.py  alert_mapper.py  base.py  file_mapper.py  processing_task_mapper.py  scan_result_mapper.py  task_execution_mapper.py
backend/src/infrastructure/event_bus/: redis_event_bus.py  subscriber.py
backend/src/infrastructure/repositories/: __init__.py  alert_repository.py  file_repository.py  processing_task_repository.py  scan_result_repository.py  task_execution_repository.py
backend/src/infrastructure/storage/: local_file_storage.py
backend/src/presentation/: dependencies.py  routes.py
backend/tests/: conftest.py  test_app.py  test_file_service_streaming.py  test_local_file_storage.py  test_metadata_extractors.py  test_mime_mismatch_check.py  test_schemas.py  test_service.py  test_tasks.py  test_unit_of_work.py
frontend/: .gitignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
(+42 files in other folders)
