[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=24.0.0",
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "pypdf>=4.0.0",
    "redis>=5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.11.0", "import-linter", "pyright"]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pytest-cov>=6.0",
    "aiosqlite>=0.20",
]

[tool.importlinter]
root_package = "src"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "domain-isolation"
type = "independence"
modules = ["src.domain"]

[[tool.importlinter.contracts]]
name = "application-depends-only-on-domain"
type = "layers"
layers = ["src.application", "src.domain"]
modules = ["src.application"]

[[tool.importlinter.contracts]]
name = "infrastructure-depends-on-domain"
type = "layers"
layers = ["src.infrastructure", "src.domain"]
modules = ["src.infrastructure"]

[[tool.importlinter.contracts]]
name = "presentation-depends-on-app-and-domain"
type = "layers"
layers = ["src.presentation", "src.application", "src.domain"]
modules = ["src.presentation"]

[[tool.importlinter.contracts]]
name = "no-fastapi-in-application"
type = "forbidden"
source_modules = ["src.application"]
forbidden_modules = ["fastapi", "celery", "sqlalchemy", "redis", "aiofiles"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "import-linter>=2.13",
    "ruff>=0.15.21",
    "pyright",
    "pre-commit>=4.6.0",
    "reportlab>=5.0.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__", "**/.venv", "**/tests"]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUntypedFunctionDecorator = false
reportUntypedClassDecorator = false
